--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <div class="container">
         <form>
-            <input type="text" id="Field" placeholder="Enter what you want to compute" oninput="calculate()">
+            <input type="text" id="Field" placeholder="Enter what you want to calculate" oninput="calculate()">
+            <button type="button" onclick="calculate()">Calculate</button> 
+
             <div id="result"></div>
         </form>
     </div>
